<resources>
    <string name="app_name">SQLProfile</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="phone_hint">Phone</string>
    <string name="save_record">Save Record</string>
    <string name="update_record">Update Record</string>
    <string name="list_record">List Record</string>
    <string name="name_text">Name</string>
    <string name="age_text">Age</string>
    <string name="phone_text">Phone</string>
</resources>
