<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp"
    app:cardBackgroundColor="@android:color/holo_orange_light"
    android:clickable="true"
    android:focusable="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"
            android:contentDescription="ProfileIcon" />
        <LinearLayout
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_text"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/tPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_text"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>